refactor : refactor getBookingsByOwnerParameterTest method